@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<upstream>
-		<bugs-to>mailto:dev-portage@gentoo.org</bugs-to>
-		<changelog>http://git.overlays.gentoo.org/gitweb/?p=proj/portage.git;a=blob_plain;f=RELEASE-NOTES</changelog>
-		<doc>http://www.gentoo.org/doc/en/handbook/handbook-x86.xml?part=3</doc>
-	</upstream>
-	<maintainer><email>dev-portage@gentoo.org</email></maintainer>
-	<use>
-		<flag name="epydoc">Build html API documentation with epydoc.</flag>
-		<flag name="ipc">Use inter-process communication between portage and running ebuilds.</flag>
-		<flag name="less">Pull in sys-apps/less as default pager for etc-update.</flag>
-		<flag name="pypy2_0">Use pypy-c2.0 as Python interpreter.</flag>
-		<flag name="python2">Use python2 as Python interpreter.</flag>
-		<flag name="python3">Use python3 as Python interpreter.</flag>
-	</use>
+  <upstream>
+    <bugs-to>mailto:dev-portage@gentoo.org</bugs-to>
+    <changelog>http://git.overlays.gentoo.org/gitweb/?p=proj/portage.git;a=blob_plain;f=RELEASE-NOTES</changelog>
+    <doc>http://www.gentoo.org/doc/en/handbook/handbook-x86.xml?part=3</doc>
+  </upstream>
+  <maintainer>
+    <email>dev-portage@gentoo.org</email>
+  </maintainer>
+  <use>
+    <flag name="epydoc">Build html API documentation with epydoc.</flag>
+    <flag name="ipc">Use inter-process communication between portage and running ebuilds.</flag>
+    <flag name="less">Pull in sys-apps/less as default pager for etc-update.</flag>
+    <flag name="pypy2_0">Use pypy-c2.0 as Python interpreter.</flag>
+    <flag name="python2">Use python2 as Python interpreter.</flag>
+    <flag name="python3">Use python3 as Python interpreter.</flag>
+  </use>
 </pkgmetadata>
