@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.77 2013/05/16 13:59:27 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/portage-9999.ebuild,v 1.78 2013/06/30 16:56:33 jlec Exp $
 
 EAPI=3
 PYTHON_COMPAT=(
@@ -16,6 +16,8 @@ LICENSE="GPL-2"
 KEYWORDS=""
 SLOT="0"
 IUSE="build doc epydoc +ipc linguas_ru pypy2_0 python2 python3 selinux xattr"
+
+REQUIRED_USE="${PYTHON_REQUIRED_USE}"
 
 for _pyimpl in ${PYTHON_COMPAT[@]} ; do
 	IUSE+=" python_targets_${_pyimpl}"
